fix: 응답 데이터 수정
